PCH: Add support for multi architecture iOS projects

Fixes: #20497